--- a/styles/style.css
+++ b/styles/style.css
@@ -7,6 +7,7 @@
 }
 
 nav {
+  z-index: 60;
   transition: ease 0.5s;
   -webkit-transition: ease 0.5s;
   -moz-transition: ease 0.5s;
@@ -190,6 +191,7 @@ body {
 }
 
 #changemode {
+  z-index: 50;
   float: left;
   position: absolute;
   transition: all 0.5s;
@@ -214,7 +216,7 @@ body {
   right: 0;
   position: fixed;
   margin-bottom: 15px;
-  margin-right: 10px;
+  margin-right: 15px;
   transition: all 0.5s;
   -webkit-transition: all 0.5s;
   -moz-transition: all 0.5s;
