--- a/styles/style.css
+++ b/styles/style.css
@@ -220,18 +220,19 @@ body {
 }
 
 #upup {
-  /* background-color: #00000000; */
+  transition: all 0.25s;
+  /*background-color: #00000000;
+  */align-items: center;
+  text-align: center;
   bottom: 0;
   border-radius: 20%;
-  right: 0;
   position: fixed;
   margin-bottom: 15px;
-  margin-right: 15px;
   transition: all 0.5s;
-  -webkit-transition: all 0.5s;
-  -moz-transition: all 0.5s;
-  -ms-transition: all 0.5s;
-  -o-transition: all 0.5s;
+  -webkit-transition: all 0.25s;
+  -moz-transition: all 0.25s;
+  -ms-transition: all 0.25s;
+  -o-transition: all 0.25s;
   -webkit-border-radius: 20%;
   -moz-border-radius: 20%;
   -ms-border-radius: 20%;
